05-07-2004 Qball <Qball@qballcow.nl>
	* src/playlist2.c/glade/playlist.glade: Added context menu to the playlist.
	* src/playlist2.c: added shuffle/clear and crop function.
04-07-2004 Qball <Qball@qballcow.nl>
	* src/misc.c:	Replace _ with a space
	* po/fr.po:	Added french translation (thanks goes to Mathieu
	Doidy)

03-07-2004 Qball <Qball@qballcow>
	* Added translation support
	* src/playlist.c:	Added a function to open/popup the filter and show filtered list.
	* src/id3info.c: Uses new playlist for filter function.
	* glade/gmpc.glade: Removed search album button in id3info window.
	* src/id3info.c: removed find_album()
	* src/id3info.c: show stream name in album field.
	* main/main.c: when updating database show message in song-title window

02-07-2004 Qball <Qball@qballcow.nl>
	* Removed code in tray_icon.c that set an non-existing widget
	sensitive
	* Catch key presses on tree store
	* If del is pressed when playlist selected or search query remove
	them.
	* ctrl-l gives focus to search-entry
	* Made the button layout smaller.
	* Added confirmation dialog to deleting playlist/search query from
	del key.
	* create anjuta project file.
	* src/song-browser.h: Added enumeration for browse types.
	* src/song-browser.c: Added support for adding a search query completely.




01-07-2004 Qball <Qball@qballcow.nl>
	* Track window size changes and grow/shrink title box accordingly
	* browse by search now opens an old search if the same search is done
	again.
	* removed default focus from close button in song-browser
	* Added buttons for repeat/shuff
	* mainwindow 20px smaller
	* Made mainwindow 20 pixels smaller
	* changed configure in to depend on gtk+-2.4 and up
	* Commented most parts of song-browser.c
	* added error_Checks to song-browser.c
	* removed dead code
	* Bump version in glade
	* Temporary icon for playlist and pref. in main gui 
	* Added keybinding to playlist (p) and preferences (ctrl-p)